# OpenParkingManager

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  database.sqlite  designSpecs  entry_config.json  node_config.json  protocol
common/: CMakeLists.txt
common/include/: ReadLicensePlates.hpp  optcodes.hpp
common/src/: ReadLicensePlates.cpp
entry/: CMakeLists.txt
entry/src/: main.cpp
hardware/: #topdown.dxf  top_final.dxf  topdown.dxf
hub/: CMakeLists.txt
hub/src/: CommandLine.cpp  CommandLine.hpp  CommandLine_uvWrap.hpp  CoreSystem.cpp  CoreSystem.hpp  Data.hpp  Database.cpp  Database.hpp  IBaseSystem.hpp  Manager.hpp  NetworkInterperter.cpp  NetworkInterperter.hpp  NetworkParser.cpp  NetworkingManager.cpp  NetworkingManager.hpp  Utils.hpp  main.cpp
hub/src/LouisNet/: AsyncSocket.cpp  AsyncSocket.hpp  Listener.cpp  Listener.hpp  LouisNet.hpp  Packet.cpp  Packet.hpp  PacketListener.cpp  PacketListener.hpp  Socket.cpp  Socket.hpp
hub/src/networking/: Address.cpp  Address.hpp  AsyncSocket.cpp  AsyncSocket.hpp  Connection.cpp  Connection.hpp  Listener.cpp  Listener.hpp  Packet.cpp  Packet.hpp  PacketListener.cpp  PacketListener.hpp  Socket.cpp  Socket.hpp
hub/src_old/: CommandInterperter.cpp  CommandLine.cpp  CommandLine.hpp  CommandLineLicences.hpp  IBaseSystem.hpp  Manager.cpp  Manager.hpp  NetworkInterperter.cpp  NetworkInterperter_uvWrap.hpp  main.cpp
node/: CMakeLists.txt
node/src/: main.cpp
paymachine/Wifi_module/: Wifi_module.ino
paymachine/arduino controller/paymentmachine/: paymentmachine.ino
